Handle pasted images and direct images separately

--- a/anime-mining/front.html
+++ b/anime-mining/front.html
@@ -11,7 +11,12 @@
     {{/target-audio}}
     [sound:{{audio}}]
     <br>
-    <img src="{{image}}" alt="{{source}}">
+    {{#image-pasted}}
+        {{image-pasted}}
+    {{/image-pasted}}
+    {{#image-raw}}
+        <img src="{{image-raw}}">
+    {{/image-raw}}
     {{#source}}
         <br>
         (source: {{source}})
