Use const instead of let

--- a/manga-mining/front.html
+++ b/manga-mining/front.html
@@ -38,7 +38,7 @@ document.addEventListener(
 );
 
 function toggle_click_show() {
-    let click_show = document.getElementById('click-show');
+    const click_show = document.getElementById('click-show');
     click_show.hidden = !click_show.hidden;
 }
 </script>
