Fix manga audio format

--- a/manga-mining/front.html
+++ b/manga-mining/front.html
@@ -9,7 +9,7 @@
         <br>
     {{/sentence}}
     {{#target-audio}}
-        [sound:{{target-audio}}]
+        {{target-audio}}
         <br>
     {{/target-audio}}
     {{#image-pasted}}
